<resources>
    <string name="app_name">Tajik Anemia Study</string>
    <string name="section1_mainheading"> Section 1: Identifying Information</string>
    <string name="section2_mainheading"> Section 2: Young Infant Information</string>
    <string name="section3_mainheading"> Section 3: Eligibility </string>
    <string name="section4_mainheading"> Section 4: Treatment </string>
    <string name="section5_mainheading"> Section 5: Diagnosis and outcome</string>
    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="splashText"> </string>
    <string name="splashText2">  </string>
    <string name="check_pending_forms">CHECK PENDING FORMS</string>
    <string name="open_household_form">OPEN HOUSEHOLD FORM</string>
    <string name="open_anthro_form">UPDATE ANTHRO FORM</string>
    <string name="open_blood_form">UPDATE BLOOD INFORMANTION</string>
    <string name="open_stool_form">UPDATE STOOL INFORMANTION</string>
    <string name="records_summary">Records Summary</string>
    <string name="main_menu">Main Menu</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>
    <string name="database">Database</string>
    <string name="region">REGION</string>
    <string name="district">DISTRICT</string>
    <string name="uc">UC</string>
    <string name="cityVillage">City / Village</string>
    <string name="childScreening">Child Screening</string>
    <string name="childFollowup">Child Follow-up</string>
    <string name="wraScreening">WRAs Screening</string>
    <string name="wraFollowup">WRAs Follow-up</string>
    <string name="btnSave">Save</string>
    <string name="btnEnd">Cancel</string>
    <string name="signin">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="country">Country (Click to change)</string>
    <string name="pakistan">Pakistan</string>
    <string name="tajikistan">Tajikistan</string>
    <string name="btnLogin">Login</string>
    <string name="btnDownloadData">Download Data</string>
    <string name="cs_MAexist">might be already exist</string>
    <string name="netwrok">Network connection not available!</string>
    <string name="invalidpass">Invalid Password</string>
    <string name="unameRequired">Username is required.</string>
    <string name="incorrcetPass">Incorrect Password</string>
    <string name="downData">Download Data</string>
    <string name="permission">Permissions Required</string>
    <string name="warning">Warning</string>
    <string name="newApp">New App downloaded!!</string>
    <string name="appVer">App New Version</string>
    <string name="downloaded">Downloaded</string>
    <string name="appDownload">appDownload</string>
    <string name="newVer">New Version</string>
    <string name="downloading">Downloading</string>
    <string name="available">Available</string>
    <string name="downError">Cant download.. Internet connectivity issue!</string>
    <string name="backBtn">Press Back again to Exit</string>
    <string name="noNetwork">No network connection available!</string>
    <string name="appAvailable">APP is available!</string>
    <string name="oldAppMsg">App Ver." + " is now available. Your are currently using older Ver."</string>
    <string name="installNewApp">Install new version to use this app</string>
    <string name="install">Install</string>
    <string name="cancel">Cancel</string>
    <string name="complete">complete</string>
    <string name="updatingError">Error in updating db!!</string>
    <string name="updateDbError1">"Sorry. You can't go further."</string>
    <string name="updateDbError2">"Please contact IT Team (Failed to update DB)"</string>
    <string name="bckBtn">You Cant go back</string>
    <string name="processing">Processing</string>
    <string name="confirmation">Confirmation!</string>
    <string name="cntBtn">Are you sure, you want to continue - interview</string>
    <string name="failedUpdateDb">SORRY! Failed to update DB</string>
    <string name="invalidDate">Invalid date!</string>
    <string name="ageCalc">"Both Month and Year don't be zero!!"</string>
    <string name="no"> No </string>
    <string name="dkn"> Don’t Know </string>
    <string name="none"> No one </string>
    <string name="never"> Never</string>
    <string name="na"> Applicable /Not Available  </string>
    <string name="nap"> Not Applicable </string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="nav">Not Available </string>
    <string name="ref"> Refused </string>
    <string name="other"> Other </string>
    <string name="specify"> Please explain </string>
    <string name="year"> Year </string>
    <string name="month"> Month </string>
    <string name="weeks"> Week </string>
    <string name="days"> Day </string>
    <string name="hours"> Hour </string>
    <string name="minutes"> Minutes </string>
    <string name="kg"> Kilograms </string>
    <string name="km"> Kilometers </string>
    <string name="cm"> cm </string>
    <string name="in"> Inch </string>
    <string name="rupees">  Rupees </string>
    <string name="num"> Number </string>
    <string name="name"> Name </string>
    <string name="contactnum">Contact Number </string>
    <string name="checkHHpresent"> The name of head of the household corresponds to the line listing data.</string>
    <string name="newHHheadname"> Name of new head of the household </string>
    <string name="title01">Section 1: Identifying Information</string>
    <string name="tsf101">Assessment number</string>
    <string name="tsf102">MR number of baby</string>
    <string name="tsf103">Name of assessor (Initials)</string>
    <string name="tsf104">Name of the infant</string>
    <string name="tsf105">Accompanied by</string>
    <string name="tsf10501">Mother</string>
    <string name="tsf10502">Father</string>
    <string name="tsf10503">Other</string>
    <string name="tsf106">Date of visit [dd/mm/yyyy]</string>
    <string name="tsf107">Time of visit (00:00 24 hour format)</string>
    <string name="tsf108">Address</string>
    <string name="tsf109">Catchment area</string>
    <string name="tsf10901">Yes</string>
    <string name="tsf10902">No</string>
    <string name="tsf110">Hospital Name </string>
    <string name="tsf111">Baby presented through</string>
    <string name="tsf11101">NICU</string>
    <string name="tsf11102">OPD</string>
    <string name="tsf11103">ER</string>
    <string name="tsf112">Important notes about the patient</string>
    <string name="tsf20503">Underdetermined</string>
    <string name="title02">Section 2: Young Infant Information</string>
    <string name="tsf201">Date of Birth [dd/mm/yyyy]:</string>
    <string name="tsf202">Current Age (in days)</string>
    <string name="tsf203">Weight (in grams)</string>
    <string name="tsf204">Weight for age (SD)</string>
    <string name="tsf205">Sex of Child</string>
    <string name="tsf20501">Male</string>
    <string name="tsf20502">Female</string>
    <string name="tsf206">Presenting Complains</string>
    <string name="tsf206c1">1-Complain</string>
    <string name="tsf206d1">Since</string>
    <string name="tsf206c2">2-Complain</string>
    <string name="tsf206d2">Since</string>
    <string name="tsf206c3">3-Complain</string>
    <string name="tsf206d3">Since</string>
    <string name="tsf206c4">4-Complain</string>
    <string name="tsf206d4">Since</string>
    <string name="title03">Section 3: Eligibility </string>
    <string name="tsf301">Breath Count (1 minute)</string>
    <string name="tsf302">Repeat breath count if  &gt; 60 bpm</string>
    <string name="tsf303">Severe chest indrawing</string>
    <string name="tsf30301">Yes</string>
    <string name="tsf30302">No</string>
    <string name="tsf304">Axillary temperature</string>
    <string name="tsf305">Repeat temperature (after 30min)</string>
    <string name="tsf306">Movement</string>
    <string name="tsf30601">Spontaneously</string>
    <string name="tsf30602">Only on stimulation</string>
    <string name="tsf30603">Not moving at all</string>
    <string name="tsf307">Feeding</string>
    <string name="tsf30701">Normally</string>
    <string name="tsf30702">Not feeding well</string>
    <string name="tsf30703">Not feeding at all</string>
    <string name="tsf308">Convulsions present or reported</string>
    <string name="tsf30801">Yes</string>
    <string name="tsf30802">No</string>
    <string name="tsf309">Any major congenital malformation</string>
    <string name="tsf30901">Yes</string>
    <string name="tsf30902">No</string>
    <string name="tsf310">Severe jaundice</string>
    <string name="tsf31001">Yes</string>
    <string name="tsf31002">No</string>
    <string name="tsf311">Any condition requiring major surgery</string>
    <string name="sech1title">SECTION H1: HOUSEHOLD INFORMATION (HH)</string>
    <string name="sec2btitle">Household Member Information</string>
    <string name="sech3title">SECTION H3: SOCIO-ECONOMIC STATUS (SS) </string>
    <string name="sech4title">SECTION H4: HAND-WASHING (HW) </string>
    <string name="sech5title">SECTION H5: SALT IODIZATION(SI)</string>
    <string name="h501">We would like to check whether the salt used in your household is iodised. May I have a sample of the salt used to cook meals in your household?</string>
    <string name="h501t1">Salt tested </string>
    <string name="h501a">0 ppm (no reaction)</string>
    <string name="h501b">Between 0 and 15 ppm</string>
    <string name="h501c">above 15 ppm</string>
    <string name="h501t2">Salt not tested</string>
    <string name="h501d">no salt in the house</string>
    <string name="h50196">other reason (specify)</string>
    <string name="h502inst">Apply 2 drops of test solution, observe the darkest reaction within 30 seconds, compare to the colour chart and then record the response (1, 2 or 3) that corresponds to test outcome in H501</string>
    <string name="h502">Observe the texture of the salt being used</string>
    <string name="h502t1">Texture</string>
    <string name="h502a">Powder</string>
    <string name="h502b">Grain</string>
    <string name="h502c">Raw</string>
    <string name="h503">Observe “Salt Iodization” Logo printed or not?</string>
    <string name="h503a">Yes</string>
    <string name="h503b">No</string>
    <string name="h503c">Not Observed</string>
    <string name="h503d">Salt in Jar</string>
    <string name="sech6title">SECTION H6: Household Food Insecurity Access Scale (HFIAS) Measurement Tool</string>
    <string name="sech7title">SECTION H7. ASSISTANCE &amp; EXPOSURE TO INTERVENTIONS</string>
    <string name="secw1title">SECTION W1: REPRODUCTIVE HISTORY</string>
    <string name="secw1atitle">DETAILS OF ALL PREGNANCIES IN LAST FIVE YEARS</string>
    <string name="secw2title">SECTION W2: ANTE-NATAL CARE (ANC)</string>
    <string name="secw3title">SECTION W3: DELIVERY &amp; POST-NATAL CARE (PNC)</string>
    <string name="secw4title">SECTION: W4 MINIMUM DIETARY DIVERSITY FOR WOMEN (15-49 YEARS)</string>
    <string name="secc1title">SECTION C1: IYCF AND FOOD DIVERSITY (FD)</string>
    <string name="secc2title">SECTION C2: FOOD CONSUMPTION AND DIET DIVERSITY FOR Children 2-5 years</string>
    <string name="secc3title">SECTION C3: MORBIDITY &amp; CARE SEEKING BEHAVIOUR</string>
    <string name="mwratitle">MWRA (15-49) YEARS</string>
    <string name="childtitle">CHILD 06-59 MONTHS</string>
    <string name="action_database">Database Manager</string>
    <string name="action_data_sync">Sync Data</string>
</resources>