<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <import type="android.view.View" />

        <variable
            name="form"
            type="edu.aku.hassannaqvi.tajik_anemia_study.models.Form" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.tajik_anemia_study.ui.sections.SectionH5Activity" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bg_gray"
        android:orientation="vertical">

        <!-- CUSTOM TOOLBAR -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/CustomToolbarTheme"
            app:popupTheme="@style/CustomPopupTheme"
            app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
            app:title="@string/sech5title"
            app:titleTextAppearance="@style/Toolbar.TitleText" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/GrpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <!-- h501  Radio   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVh501"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/Q_h501" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/h501" />

                        </LinearLayout>

                        <TextView
                            style="@style/sub_labels"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/h501t1" />

                        <RadioGroup
                            android:id="@+id/h501"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                            <RadioButton
                                android:id="@+id/h501a"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked='@{form.h501.equals("1")}'
                                android:onClick='@{()->form.setH501("1")}'
                                android:text="@string/h501a" />

                            <RadioButton
                                android:id="@+id/h501b"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked='@{form.h501.equals("2")}'
                                android:onClick='@{()->form.setH501("2")}'
                                android:text="@string/h501b" />

                            <RadioButton
                                android:id="@+id/h501c"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked='@{form.h501.equals("3")}'
                                android:onClick='@{()->form.setH501("3")}'
                                android:text="@string/h501c" />

                            <TextView
                                style="@style/sub_labels"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/h501t2" />

                            <RadioButton
                                android:id="@+id/h501d"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked='@{form.h501.equals("4")}'
                                android:onClick='@{()->form.setH501("4")}'
                                android:text="@string/h501d" />

                            <RadioButton
                                android:id="@+id/h50196"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked='@{form.h501.equals("96")}'
                                android:onClick='@{()->form.setH501("96")}'
                                android:text="@string/h50196" />

                            <EditText
                                android:id="@+id/h50196x"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
                                android:hint="@string/h50196"
                                android:tag="h50196"
                                android:text='@={form.h50196x}'
                                android:visibility='@{h50196.checked? View.VISIBLE : View.GONE}' />

                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="@{form.H501.equals(`1`) || form.H501.equals(`2`) || form.H501.equals(`3`)?View.VISIBLE:View.GONE}">

                    <TextView
                        style="@style/info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/h502inst" />


                    <!-- h502  Radio   -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/fldGrpCVh502"
                        style="@style/cardView">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bottom"
                                android:orientation="horizontal">

                                <TextView
                                    style="@style/quesNum"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text="@string/Q_h502" />

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="@string/h502" />
                            </LinearLayout>

                            <TextView
                                style="@style/sub_labels"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/h502t1" />

                            <RadioGroup
                                android:id="@+id/h502"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">


                                <RadioButton
                                    android:id="@+id/h502a"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:checked='@{form.h502.equals("1")}'
                                    android:onClick='@{()->form.setH502("1")}'
                                    android:text="@string/h502a" />

                                <RadioButton
                                    android:id="@+id/h502b"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:checked='@{form.h502.equals("2")}'
                                    android:onClick='@{()->form.setH502("2")}'
                                    android:text="@string/h502b" />

                                <RadioButton
                                    android:id="@+id/h502c"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:checked='@{form.h502.equals("3")}'
                                    android:onClick='@{()->form.setH502("3")}'
                                    android:text="@string/h502c" />
                            </RadioGroup>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <!-- h503  Radio   -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/fldGrpCVh503"
                        style="@style/cardView">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bottom"
                                android:orientation="horizontal">

                                <TextView
                                    style="@style/quesNum"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text="@string/Q_h503" />

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="@string/h503" />
                            </LinearLayout>

                            <RadioGroup
                                android:id="@+id/h503"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:id="@+id/h503a"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:checked='@{form.h503.equals("1")}'
                                    android:onClick='@{()->form.setH503("1")}'
                                    android:text="@string/h503a" />

                                <RadioButton
                                    android:id="@+id/h503b"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:checked='@{form.h503.equals("2")}'
                                    android:onClick='@{()->form.setH503("2")}'
                                    android:text="@string/h503b" />

                                <RadioButton
                                    android:id="@+id/h503c"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:checked='@{form.h503.equals("3")}'
                                    android:onClick='@{()->form.setH503("3")}'
                                    android:text="@string/h503c" />

                                <RadioButton
                                    android:id="@+id/h503d"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:checked='@{form.h503.equals("4")}'
                                    android:onClick='@{()->form.setH503("4")}'
                                    android:text="@string/h503d" />
                            </RadioGroup>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <!--EndButton LinearLayout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal"
                    android:padding="24dp">

                    <Button
                        android:id="@+id/btn_End"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:onClick="btnEnd"
                        android:text="Cancel"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_Continue"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/capsule"
                        android:backgroundTint="@color/colorAccent"
                        android:backgroundTintMode="src_atop"
                        android:onClick="btnContinue"
                        android:text="Save"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <!--EndButton LinearLayout-->


            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>